modif_index.html

--- a/table/index.html
+++ b/table/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>table_title</title>
 </head>
 <body>
-<p>Привет</p>
+<p>table_main</p>
 </body>
 </html>
