--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
+    <title>home_page</title>
 </head>
 <body>
-<p>тест</p>
+<p>home_main</p>
 </body>
 </html>
