--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>home_page</title>
+    <meta charset="utf-8">
+    <link href="./css/txt.css" rel="stylesheet">
+    <title>Hello, world!</title>
 </head>
 <body>
-<p>home_main</p>
+<h3>Hello, world!</h3>
+<P>Параграф</P>
 </body>
 </html>
