--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 </div>
 
     <div class="row">
-    <div class="col-xxl-6">col-sm-6</div>
-    <div class="col-xxl-6">col-sm-6</div>
-    <div class="col-xxl-6">col-sm-6</div>
-    <div class="col-xxl-6">col-sm-6</div>
-    <div class="col-xxl-6">col-sm-6</div>
-    <div class="col-xxl-6">col-sm-6</div>
+    <div class="col-xxl-6">col-xxl-6</div>
+    <div class="col-xxl-6">col-xxl-6</div>
+    <div class="col-xxl-6">col-xxl-6</div>
+    <div class="col-xxl-6">col-xxl-6</div>
+    <div class="col-xxl-6">col-xxl-6</div>
+    <div class="col-xxl-6">col-xxl-6</div>
 </div>
 
 
