--- a/index.html
+++ b/index.html
@@ -3,57 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/my.css" rel="stylesheet">
 
     <title>Hello, world!</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
-<div class="container-fluid">
-<div class="row">
-    <div class="col-sm-6">col-sm-6</div>
-    <div class="col-sm-6">col-sm-6</div>
-    <div class="col-sm-6">col-sm-6</div>
-    <div class="col-sm-6">col-sm-6</div>
-    <div class="col-sm-6">col-sm-6</div>
-    <div class="col-sm-6">col-sm-6</div>
-</div>
+<div class="container-xxl">
+    <div class="row">
+        <div class="col-sm-6">col-sm-6</div>
+        <div class="col-sm-6">col-sm-6</div>
+        <div class="col-sm-6">col-sm-6</div>
+        <div class="col-sm-6">col-sm-6</div>
+        <div class="col-sm-6">col-sm-6</div>
+        <div class="col-sm-6">col-sm-6</div>
+    </div>
 
     <div class="row">
-    <div class="col-xxl-6">col-xxl-6</div>
-    <div class="col-xxl-6">col-xxl-6</div>
-    <div class="col-xxl-6">col-xxl-6</div>
-    <div class="col-xxl-6">col-xxl-6</div>
-    <div class="col-xxl-6">col-xxl-6</div>
-    <div class="col-xxl-6">col-xxl-6</div>
-</div>
-
-
-
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://i.pinimg.com/736x/2d/1f/b3/2d1fb327cb7cb8477273c19d101180f6.jpg" class="d-block w-100" alt="...">
+        <div class="col-xxl-6">col-xxl-6</div>
+        <div class="col-xxl-6">col-xxl-6</div>
+        <div class="col-xxl-6">col-xxl-6</div>
+        <div class="col-xxl-6">col-xxl-6</div>
+        <div class="col-xxl-6">col-xxl-6</div>
+        <div class="col-xxl-6">col-xxl-6_</div>
     </div>
-    <div class="carousel-item">
-      <img src="https://i.pinimg.com/736x/2d/1f/b3/2d1fb327cb7cb8477273c19d101180f6.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://i.pinimg.com/736x/2d/1f/b3/2d1fb327cb7cb8477273c19d101180f6.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
 </div>
 
 <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
