--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-xxl-6">col-xxl-6</div>
         <div class="col-xxl-6">col-xxl-6</div>
         <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6">col-xxl-6_</div>
+        <div class="col-xxl-6">col-xxl-61</div>
     </div>
 </div>
 
