--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/my.css" rel="stylesheet">
-
     <title>Hello, world!</title>
 </head>
+
 <body>
 <div class="">
     <div class="">
@@ -26,7 +26,7 @@
         <div class="col-xxl-6">col-xxl-6</div>
         <div class="col-xxl-6">col-xxl-6</div>
         <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6 small text-decoration-underline">col-xxl-61</div>
+        <div class="col-xxl-6">col-xxl-6</div>
     </div>
 </div>
 
