--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-<div class="">
+<div class="container">
     <div class="">
         <div class="col-sm-6">col-sm-6</div>
         <div class="col-sm-6">col-sm-6</div>
         <div class="col-sm-6">col-sm-6</div>
         <div class="col-sm-6">col-sm-6</div>
-        <div class="col-sm">col-sm-6</div>
+        <div class="col-sm-6">col-sm-6</div>
         <div class="col-sm-6">col-sm-6</div>
     </div>
 
