--- a/index.html
+++ b/index.html
@@ -3,38 +3,50 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/my.css" rel="stylesheet">
     <title>Hello, world!</title>
 </head>
 
 <body>
-<div class="container">
-    <div class="">
-        <div class="col-sm-6">col-sm-6</div>
-        <div class="col-sm-6">col-sm-6</div>
-        <div class="col-sm-6">col-sm-6</div>
-        <div class="col-sm-6">col-sm-6</div>
-        <div class="col-sm-6">col-sm-6</div>
-        <div class="col-sm-6">col-sm-6</div>
+<div class="container text-black-50">
+
+    <div class="row">
+            <div class="col-sm-4 col_sm">col-sm-4</div>
+            <div class="col-sm-4 col_sm">col-sm-4</div>
+            <div class="col-sm-4 col_sm">col-sm-4</div>
     </div>
 
-    <div class="">
-        <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6">col-xxl-6</div>
-        <div class="col-xxl-6">col-xxl-6</div>
+    <div class="row">
+            <div class="col-md-4 col_md">col-md-4</div>
+            <div class="col-md-4 col_md">col-md-4</div>
+            <div class="col-md-4 col_md">col-md-4</div>
     </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/my.js"></script>
-<script>
+        <div class="row">
+            <div class="col-lg-4 col_lg">col-lg-4</div>
+            <div class="col-lg-4 col_lg">col-lg-4</div>
+            <div class="col-lg-4 col_lg">col-lg-4</div>
+        </div>
 
-</script>
+        <div class="row">
+            <div class="col-xl-4 col_xl">col-xl-4</div>
+            <div class="col-xl-4 col_xl">col-xl-4</div>
+            <div class="col-xl-4 col_xl">col-xl-4</div>
+            <div class="col-xl-4 col_xl">col-xl-4</div>
+        </div>
+
+    </div>
+
+    <script crossorigin="anonymous"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/my.js"></script>
+    <script>
+
+    </script>
 </body>
 </html>
