--- a/container.html
+++ b/container.html
@@ -7,7 +7,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
-    <title>Hello, world!</title>
+    <title>container</title>
 </head>
 
 <body>
